[package]
name = "pi_assets"
version = "0.8.0"
authors = ["zmax <zmax@gaia.world>"]
edition = "2021"
description = "assets manager, async load assets, The capacity of multiple managers is managed uniformly"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["pi", "assets", "cache"]
repository = "https://github.com/GaiaWorld/pi_assets"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pi_time = "0.1"
pi_cache = "0.3"
pi_hash = "0.1"
pi_async = "0.4"
pi_share = "0.2"
futures = "0.3"
flume = "0.10"


[dev-dependencies]
pcg_rand = "0.13"
rand_core = "0.6"