[package]
name = "pi_assets"
version = "0.14.6"
authors = ["zmax <zmax@gaia.world>"]
edition = "2021"
description = "assets manager, async load assets, The capacity of multiple managers is managed uniformly"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["pi", "assets", "cache"]
repository = "https://github.com/GaiaWorld/pi_assets"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pi_time = {version = "0.5"}
pi_cache = "0.4"
pi_hash = "0.1"
pi-async-rt = "0.1"
pi_share = "=0.4.15"
futures = "0.3"
pi_futures = "0.1"
flume = "0.10"
serde = { version = "1.0", features = ["derive"] }
quanta = "=0.12.3"
backtrace = "=0.3.74"


[dev-dependencies]
pcg_rand = "0.13"
rand_core = "0.6"

[patch.crates-io]
# pi_share = {path = "../pi_share"}